--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 *.jar
 *.war
 *.ear
+
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+src/main/resources/plugin.yml
+src/main/java/net/gliewe/savestate/utils/BuildInfo.java
